[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zmk"
description = "ZMK codegen"
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
  { name = "Matt Morris", email = "matt.morris114@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pydantic>=2,<3"]
dynamic = ["version"]

[tool.uv]
dev-dependencies = ["pytest", "pre-commit"]

[project.urls]
Issues = "https://github.com/themattmorris/zmk/issues"
Source = "https://github.com/themattmorris/zmk"

[tool.hatch.version]
path = "zmk/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -vv --cov=zmk --cov-report xml --cov-report term --cov-append"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "pragma: no cover",
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C",
  "C4",
  "C90",
  "D",
  "E",
  "ERA",
  "EXE",
  "F",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TRY",
  "UP",
  "W",
]
fixable = ["ALL"]
ignore = [
  "D205",   # 1 blank line required between summary line and description: https://docs.astral.sh/ruff/rules/missing-blank-line-after-summary/
  "D415",   # First line should end with a period, question mark, or exclamation point: https://docs.astral.sh/ruff/rules/ends-in-punctuation/
  "EXE002", # The file is executable but no shebang is present: https://docs.astral.sh/ruff/rules/shebang-missing-executable-file/
  "E741",   # Ambiguous variable name: https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
]
pydocstyle.convention = "google"
mccabe.max-complexity = 22

[tool.ruff.lint.isort]
known-first-party = ["zmk", "tests"]
lines-after-imports = 2

[tool.mypy]
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"
explicit_package_bases = true
